syntax = "proto3";

//import "google/protobuf/struct.proto";
package university_management;

option go_package = "/university_management";

message Department {
  int32 id = 1;
  string name = 2;
}

message Student {
  int32 id = 1;
  string name = 2;
  string rollNo = 3;
  int32 departmentId = 4;
}

message Staff {
  int32 id = 1;
  string name = 2;
}

message GetDepartmentRequest {
  int32 id = 1;
}

message GetDepartmentResponse {
  Department department = 1;
}

message GetStudentsRequest {
  int32 departmentId = 1;
}

message GetStudentsResponse {
  repeated Student student = 1;
}

message GetStaffForStudentRequest {
  string rollNo = 1;
}

message GetStaffForStudentResponse {
  repeated Staff staff = 1;
}

message LoginRequest{
  int32 id = 1;
}

message LoginResponse{
  string message = 1;
}

message LogoutRequest{
  int32 id = 1;
}

message LogoutResponse{
  string message = 1;
}

message GetNotifyRequest{
  repeated int32 id = 1;
}

message GetNotifyResponse{
  string message = 1;
}

service UniversityManagementService {
  rpc GetDepartment (GetDepartmentRequest) returns (GetDepartmentResponse) {
  }

  rpc GetStudents (GetStudentsRequest) returns (GetStudentsResponse) {
  }

  rpc GetStaffForStudent (GetStaffForStudentRequest) returns (GetStaffForStudentResponse) {
  }

  rpc Login (LoginRequest) returns (LoginResponse){
  }

  rpc Logout (LogoutRequest) returns (LogoutResponse){
  }

  rpc Notify(GetNotifyRequest) returns (GetNotifyResponse){


  }

}
